<resources>
    <string name="app_name">FTP Client</string>

    <string name="user">用户</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="ip_">IP地址:</string>
    <string name="port_">端口:</string>
    <string name="download_path_">下载目录:</string>


    <string name="upload_file">上传文件</string>
    <string name="make_dir">新建文件夹</string>
    <string name="local_dir">本地目录</string>
    <string name="download_dir">下载目录</string>
    <string name="logout">退出登录</string>


    <string name="pls_input_dir_name">文件夹名称:英文、数字、下划线_ </string>
    <string name="input_en_word">1234567890abcdefghijklmnopqrstuvwxyz_</string>

</resources>
