<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_splash"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/d_16"
        android:src="@mipmap/ic_setting" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <EditText
        android:id="@+id/userTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_48"
        android:layout_marginStart="@dimen/d_48"
        android:background="@null"
        android:drawablePadding="@dimen/d_10"
        android:drawableStart="@mipmap/ic_user"
        android:hint="@string/user"
        android:padding="@dimen/d_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/s_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:layout_marginEnd="@dimen/d_48"
        android:layout_marginStart="@dimen/d_48"
        android:background="@color/white" />


    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_48"
        android:layout_marginStart="@dimen/d_48"
        android:layout_marginTop="@dimen/d_10"
        android:background="@null"
        android:drawablePadding="@dimen/d_10"
        android:drawableStart="@mipmap/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/d_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/s_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d_1"
        android:layout_marginEnd="@dimen/d_48"
        android:layout_marginStart="@dimen/d_48"
        android:background="@color/white" />

    <CheckBox
        android:id="@+id/savePsdBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/d_48"
        android:button="@drawable/icon_ring_check_selector"
        android:checked="true"
        android:padding="@dimen/d_16"
        android:text="@string/remember_password"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/d_48"
        android:layout_marginStart="@dimen/d_48"
        android:background="@drawable/round_stroke_white"
        android:minHeight="@dimen/d_36"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>